src/sage/libs/pari/paridecl.pxd


    GEN alg_centralproj(GEN al, GEN z, int maps)
    GEN alg_change_overorder_shallow(GEN al, GEN ord)
    GEN alg_complete(GEN rnf, GEN aut, GEN hi, GEN hf, long maxord)
    GEN alg_csa_table(GEN nf, GEN mt, long v, long maxord)
    GEN alg_cyclic(GEN rnf, GEN aut, GEN b, long maxord)
    GEN alg_decomposition(GEN al)
    long alg_get_absdim(GEN al)
    long algabsdim(GEN al)
    GEN alg_get_abssplitting(GEN al)
    GEN alg_get_aut(GEN al)
    GEN algaut(GEN al)
    GEN alg_get_auts(GEN al)
    GEN alg_get_b(GEN al)
    GEN algb(GEN al)
    GEN algcenter(GEN al)
    GEN alg_get_center(GEN al)
    GEN alg_get_char(GEN al)
    GEN algchar(GEN al)
    long alg_get_degree(GEN al)
    long algdegree(GEN al)
    long alg_get_dim(GEN al)
    long algdim(GEN al)
    GEN alg_get_hasse_f(GEN al)
    GEN alghassef(GEN al)
    GEN alg_get_hasse_i(GEN al)
    GEN alghassei(GEN al)
    GEN alg_get_invbasis(GEN al)
    GEN alginvbasis(GEN al)
    GEN alg_get_multable(GEN al)
    GEN alg_get_basis(GEN al)
    GEN algbasis(GEN al)
    GEN alg_get_relmultable(GEN al)
    GEN algrelmultable(GEN al)
    GEN alg_get_splitpol(GEN al)
    GEN alg_get_splittingfield(GEN al)
    GEN algsplittingfield(GEN al)
    GEN alg_get_splittingbasis(GEN al)
    GEN alg_get_splittingbasisinv(GEN al)
    GEN alg_get_splittingdata(GEN al)
    GEN algsplittingdata(GEN al)
    GEN alg_get_tracebasis(GEN al)
    GEN alg_hasse(GEN nf, long n, GEN hi, GEN hf, long var, long flag)
    GEN alg_hilbert(GEN nf, GEN a, GEN b, long v, long flag)
    GEN alg_matrix(GEN nf, long n, long v, GEN L, long flag)
    long alg_model(GEN al, GEN x)
    GEN alg_ordermodp(GEN al, GEN p)
    GEN alg_quotient(GEN al, GEN I, int maps)
    GEN algradical(GEN al)
    GEN algsimpledec(GEN al, int maps)
    GEN algsubalg(GEN al, GEN basis)
    long alg_type(GEN al)
    GEN algadd(GEN al, GEN x, GEN y)
    GEN algalgtobasis(GEN al, GEN x)
    GEN algbasischarpoly(GEN al, GEN x, long v)
    GEN algbasismul(GEN al, GEN x, GEN y)
    GEN algbasismultable(GEN al, GEN x)
    GEN algbasismultable_Flm(GEN mt, GEN x, ulong m)
    GEN algbasistoalg(GEN al, GEN x)
    GEN algcharpoly(GEN al, GEN x, long v)
    GEN algdisc(GEN al)
    GEN algdivl(GEN al, GEN x, GEN y)
    GEN algdivr(GEN al, GEN x, GEN y)
    GEN alghasse(GEN al, GEN pl)
    GEN alginit(GEN A, GEN B, long v, long flag)
    long algindex(GEN al, GEN pl)
    GEN alginv(GEN al, GEN x)
    int algisassociative(GEN mt0, GEN p)
    int algiscommutative(GEN al)
    int algisdivision(GEN al, GEN pl)
    int algisramified(GEN al, GEN pl)
    int algissemisimple(GEN al)
    int algissimple(GEN al, long ss)
    int algissplit(GEN al, GEN pl)
    int algisdivl(GEN al, GEN x, GEN y, GEN* ptz)
    int algisinv(GEN al, GEN x, GEN* ptix)
    GEN algleftordermodp(GEN al, GEN Ip, GEN p)
    GEN algmul(GEN al, GEN x, GEN y)
    GEN algmultable(GEN al)
    GEN alglathnf(GEN al, GEN m)
    GEN algleftmultable(GEN al, GEN x)
    GEN algneg(GEN al, GEN x)
    GEN algnorm(GEN al, GEN x)
    GEN algpoleval(GEN al, GEN pol, GEN x)
    GEN algpow(GEN al, GEN x, GEN n)
    GEN algprimesubalg(GEN al)
    GEN algramifiedplaces(GEN al)
    GEN algrandom(GEN al, GEN b)
    GEN algsplittingmatrix(GEN al, GEN x)
    GEN algsqr(GEN al, GEN x)
    GEN algsub(GEN al, GEN x, GEN y)
    GEN algtableinit(GEN mt, GEN p)
    GEN algtensor(GEN al1, GEN al2, long maxord)
    GEN algtrace(GEN al, GEN x)
    long algtype(GEN al)
    GEN bnfgwgeneric(GEN bnf, GEN Lpr, GEN Ld, GEN pl, long var)
    GEN bnrgwsearch(GEN bnr, GEN Lpr, GEN Ld, GEN pl)
    void checkalg(GEN x)
    void checkhasse(GEN nf, GEN hi, GEN hf, long n)
    long cyclicrelfrob(GEN rnf, GEN nf2, GEN auts, GEN pr)
    GEN hassecoprime(GEN hi, GEN hf, long n)
    GEN hassedown(GEN nf, long n, GEN hi, GEN hf)
    GEN hassewedderburn(GEN hi, GEN hf, long n)
    long localhasse(GEN rnf, GEN nf2, GEN cnd, GEN pl, GEN auts, GEN b, long k)
    GEN nfgrunwaldwang(GEN nf0, GEN Lpr, GEN Ld, GEN pl, long var)
    GEN nfgwkummer(GEN nf, GEN Lpr, GEN Ld, GEN pl, long var)

    # alglin1.c

    GEN     F2m_F2c_gauss(GEN a, GEN b)
    GEN     F2m_F2c_invimage(GEN A, GEN y)
    GEN     F2m_deplin(GEN x)
    ulong   F2m_det(GEN x)
    ulong   F2m_det_sp(GEN x)
    GEN     F2m_gauss(GEN a, GEN b)
    GEN     F2m_image(GEN x)
    GEN     F2m_indexrank(GEN x)
    GEN     F2m_inv(GEN x)
    GEN     F2m_invimage(GEN A, GEN B)
    GEN     F2m_ker(GEN x)
    GEN     F2m_ker_sp(GEN x, long deplin)
    long    F2m_rank(GEN x)
    GEN     F2m_suppl(GEN x)
    GEN     F2xqM_F2xqC_mul(GEN a, GEN b, GEN T)
    GEN     F2xqM_det(GEN a, GEN T)
    GEN     F2xqM_ker(GEN x, GEN T)
    GEN     F2xqM_image(GEN x, GEN T)
    GEN     F2xqM_inv(GEN a, GEN T)
    GEN     F2xqM_mul(GEN a, GEN b, GEN T)
    long    F2xqM_rank(GEN x, GEN T)
    GEN     Flm_Flc_gauss(GEN a, GEN b, ulong p)
    GEN     Flm_Flc_invimage(GEN mat, GEN y, ulong p)
    GEN     Flm_deplin(GEN x, ulong p)
    ulong   Flm_det(GEN x, ulong p)
    ulong   Flm_det_sp(GEN x, ulong p)
    GEN     Flm_gauss(GEN a, GEN b, ulong p)
    GEN     Flm_image(GEN x, ulong p)
    GEN     Flm_invimage(GEN m, GEN v, ulong p)
    GEN     Flm_indexrank(GEN x, ulong p)
    GEN     Flm_inv(GEN x, ulong p)
    GEN     Flm_ker(GEN x, ulong p)
    GEN     Flm_ker_sp(GEN x, ulong p, long deplin)
    long    Flm_rank(GEN x, ulong p)
    GEN     Flm_suppl(GEN x, ulong p)
    GEN     FlxqM_FlxqC_gauss(GEN a, GEN b, GEN T, ulong p)
    GEN     FlxqM_FlxqC_mul(GEN a, GEN b, GEN T, ulong p)
    GEN     FlxqM_det(GEN a, GEN T, ulong p)
    GEN     FlxqM_gauss(GEN a, GEN b, GEN T, ulong p)
    GEN     FlxqM_ker(GEN x, GEN T, ulong p)
    GEN     FlxqM_image(GEN x, GEN T, ulong p)
    GEN     FlxqM_inv(GEN x, GEN T, ulong p)
    GEN     FlxqM_mul(GEN a, GEN b, GEN T, ulong p)
    long    FlxqM_rank(GEN x, GEN T, ulong p)
    GEN     FpM_FpC_gauss(GEN a, GEN b, GEN p)
    GEN     FpM_FpC_invimage(GEN m, GEN v, GEN p)
    GEN     FpM_deplin(GEN x, GEN p)
    GEN     FpM_det(GEN x, GEN p)
    GEN     FpM_gauss(GEN a, GEN b, GEN p)
    GEN     FpM_image(GEN x, GEN p)
    GEN     FpM_indexrank(GEN x, GEN p)
    GEN     FpM_intersect(GEN x, GEN y, GEN p)
    GEN     FpM_inv(GEN x, GEN p)
    GEN     FpM_invimage(GEN m, GEN v, GEN p)
    GEN     FpM_ker(GEN x, GEN p)
    long    FpM_rank(GEN x, GEN p)
    GEN     FpM_suppl(GEN x, GEN p)
    GEN     FqM_FqC_gauss(GEN a, GEN b, GEN T, GEN p)
    GEN     FqM_FqC_mul(GEN a, GEN b, GEN T, GEN p)
    GEN     FqM_deplin(GEN x, GEN T, GEN p)
    GEN     FqM_det(GEN x, GEN T, GEN p)
    GEN     FqM_gauss(GEN a, GEN b, GEN T, GEN p)
    GEN     FqM_ker(GEN x, GEN T, GEN p)
    GEN     FqM_image(GEN x, GEN T, GEN p)
    GEN     FqM_inv(GEN x, GEN T, GEN p)
    GEN     FqM_mul(GEN a, GEN b, GEN T, GEN p)
    long    FqM_rank(GEN a, GEN T, GEN p)
    GEN     FqM_suppl(GEN x, GEN T, GEN p)
    GEN     QM_inv(GEN M, GEN dM)
    GEN     RgM_Fp_init(GEN a, GEN p, ulong *pp)
    GEN     RgM_RgC_invimage(GEN A, GEN B)
    GEN     RgM_diagonal(GEN m)
    GEN     RgM_diagonal_shallow(GEN m)
    GEN     RgM_Hadamard(GEN a)
    GEN     RgM_inv_upper(GEN a)
    GEN     RgM_invimage(GEN A, GEN B)
    GEN     RgM_solve(GEN a, GEN b)
    GEN     RgM_solve_realimag(GEN x, GEN y)
    void    RgMs_structelim(GEN M, long nbrow, GEN A, GEN *p_col, GEN *p_lin)
    GEN     ZM_det(GEN a)
    GEN     ZM_detmult(GEN A)
    GEN     ZM_gauss(GEN a, GEN b)
    GEN     ZM_imagecompl(GEN x)
    GEN     ZM_indeximage(GEN x)
    GEN     ZM_indexrank(GEN x)
    GEN     ZM_inv(GEN M, GEN dM)
    GEN     ZM_inv_ratlift(GEN M, GEN *pden)
    long    ZM_rank(GEN x)
    GEN     ZlM_gauss(GEN a, GEN b, ulong p, long e, GEN C)
    GEN     closemodinvertible(GEN x, GEN y)
    GEN     deplin(GEN x)
    GEN     det(GEN a)
    GEN     det0(GEN a, long flag)
    GEN     det2(GEN a)
    GEN     detint(GEN x)
    GEN     eigen(GEN x, long prec)
    GEN     gauss(GEN a, GEN b)
    GEN     gaussmodulo(GEN M, GEN D, GEN Y)
    GEN     gaussmodulo2(GEN M, GEN D, GEN Y)
    GEN     gen_Gauss(GEN a, GEN b, void *E, bb_field *ff)
    GEN     gen_Gauss_pivot(GEN x, long *rr, void *E, bb_field *ff)
    GEN     gen_det(GEN a, void *E, bb_field *ff)
    GEN     gen_ker(GEN x, long deplin, void *E, bb_field *ff)
    GEN     gen_matcolmul(GEN a, GEN b, void *E, bb_field *ff)
    GEN     gen_matmul(GEN a, GEN b, void *E, bb_field *ff)
    GEN     image(GEN x)
    GEN     image2(GEN x)
    GEN     imagecompl(GEN x)
    GEN     indexrank(GEN x)
    GEN     inverseimage(GEN mat, GEN y)
    GEN     ker(GEN x)
    GEN     keri(GEN x)
    GEN     mateigen(GEN x, long flag, long prec)
    GEN     matimage0(GEN x, long flag)
    GEN     matker0(GEN x, long flag)
    GEN     matsolvemod0(GEN M, GEN D, GEN Y, long flag)
    long    rank(GEN x)
    GEN     reducemodinvertible(GEN x, GEN y)
    GEN     reducemodlll(GEN x, GEN y)
    GEN     split_realimag(GEN x, long r1, long r2)
    GEN     suppl(GEN x)

    # alglin2.c

    GEN     Flm_charpoly(GEN x, ulong p)
    GEN     Flm_hess(GEN x, ulong p)
    GEN     FpM_charpoly(GEN x, GEN p)
    GEN     FpM_hess(GEN x, GEN p)
    GEN     Frobeniusform(GEN V, long n)
    GEN     QM_minors_coprime(GEN x, GEN pp)
    GEN     QM_ImZ_hnf(GEN x)
    GEN     QM_ImQ_hnf(GEN x)
    GEN     QM_charpoly_ZX(GEN M)
    GEN     QM_charpoly_ZX_bound(GEN M, long bit)
    GEN     QM_charpoly_ZX2_bound(GEN M, GEN M2, long bit)
    GEN     ZM_charpoly(GEN x)
    GEN     adj(GEN x)
    GEN     adjsafe(GEN x)
    GEN     caract(GEN x, long v)
    GEN     caradj(GEN x, long v, GEN *py)
    GEN     carberkowitz(GEN x, long v)
    GEN     carhess(GEN x, long v)
    GEN     charpoly(GEN x, long v)
    GEN     charpoly0(GEN x, long v, long flag)
    GEN     gnorm(GEN x)
    GEN     gnorml1(GEN x, long prec)
    GEN     gnorml1_fake(GEN x)
    GEN     gnormlp(GEN x, GEN p, long prec)
    GEN     gnorml2(GEN x)
    GEN     gsupnorm(GEN x, long prec)
    void    gsupnorm_aux(GEN x, GEN *m, GEN *msq, long prec)
    GEN     gtrace(GEN x)
    GEN     hess(GEN x)
    GEN     intersect(GEN x, GEN y)
    GEN     jacobi(GEN a, long prec)
    GEN     matadjoint0(GEN x, long flag)
    GEN     matcompanion(GEN x)
    GEN     matrixqz0(GEN x, GEN pp)
    GEN     minpoly(GEN x, long v)
    GEN     qfgaussred(GEN a)
    GEN     qfgaussred_positive(GEN a)
    GEN     qfsign(GEN a)

    # alglin3.c
